src/bin/snapshots/antlr4_rust_gen__tests__multi_alternative_label_branch_hazard_context.snap
---
source: src/bin/antlr4-rust-gen.rs
expression: context(name)
---

    pub fn child_count(&self) -> usize {
        match &self.__node {
            __GeneratedRuleContext::Stored(node) => node.child_count(),
            __GeneratedRuleContext::Active { context, .. } => context.child_count(),
        }
    }

    pub fn start(&self) -> __GeneratedTokenView {
        let token = match &self.__node {
            __GeneratedRuleContext::Stored(node) => node.start(),
            __GeneratedRuleContext::Active { context, tokens, .. } => context.start(tokens),
        };
        __GeneratedTokenView { text: token.map(|token| token.text_or_empty().to_owned()).unwrap_or_default() }
    }

    pub fn text(&self) -> String {
        match &self.__node {
            __GeneratedRuleContext::Stored(node) => node.text(),
            __GeneratedRuleContext::Active { context, storage, tokens } => context.text(storage, tokens),
        }
    }
    pub fn unary(&self) -> Result<UnaryContext<'a>, MissingChildError> {
        __rule_children(self.__node, 4)
            .next()
            .map(|node| UnaryContext::__from_child_node(node, self.__invocation_states.as_deref()))
            .ok_or_else(|| MissingChildError::new("BranchHazardContext", "unary"))
    }
    pub fn star_token(&self) -> Option<TerminalNode<'a>> {
        __token_children(self.__node, 8)
            .next()
            .map(TerminalNode::new)
    }
    pub fn num_token(&self) -> Result<TerminalNode<'a>, MissingChildError> {
        __token_children(self.__node, 14)
            .next()
            .map(TerminalNode::new)
            .ok_or_else(|| MissingChildError::new("BranchHazardContext", "NUM"))
    }
}
