src/bin/snapshots/antlr4_rust_gen__tests__multi_alternative_label_calc_context.snap
---
source: src/bin/antlr4-rust-gen.rs
expression: calc_context
---

    pub fn child_count(&self) -> usize {
        match &self.__node {
            __GeneratedRuleContext::Stored(node) => node.child_count(),
            __GeneratedRuleContext::Active { context, .. } => context.child_count(),
        }
    }

    pub fn start(&self) -> __GeneratedTokenView {
        let token = match &self.__node {
            __GeneratedRuleContext::Stored(node) => node.start(),
            __GeneratedRuleContext::Active { context, tokens, .. } => context.start(tokens),
        };
        __GeneratedTokenView { text: token.map(|token| token.text_or_empty().to_owned()).unwrap_or_default() }
    }

    pub fn text(&self) -> String {
        match &self.__node {
            __GeneratedRuleContext::Stored(node) => node.text(),
            __GeneratedRuleContext::Active { context, storage, tokens } => context.text(storage, tokens),
        }
    }
    pub fn calc_children(&self) -> impl Iterator<Item = CalcContext<'a>> + '_ {
        __rule_children(self.__node, 2)
            .map(move |node| CalcContext::__from_child_node(node, self.__invocation_states.as_deref()))
    }
    pub fn unary(&self) -> Option<UnaryContext<'a>> {
        __rule_children(self.__node, 4)
            .next()
            .map(|node| UnaryContext::__from_child_node(node, self.__invocation_states.as_deref()))
    }
    pub fn star_token(&self) -> Option<TerminalNode<'a>> {
        __token_children(self.__node, 8)
            .next()
            .map(TerminalNode::new)
    }
    pub fn slash_token(&self) -> Option<TerminalNode<'a>> {
        __token_children(self.__node, 9)
            .next()
            .map(TerminalNode::new)
    }
    pub fn percent_token(&self) -> Option<TerminalNode<'a>> {
        __token_children(self.__node, 10)
            .next()
            .map(TerminalNode::new)
    }
    pub fn plus_token(&self) -> Option<TerminalNode<'a>> {
        __token_children(self.__node, 11)
            .next()
            .map(TerminalNode::new)
    }
    pub fn minus_token(&self) -> Option<TerminalNode<'a>> {
        __token_children(self.__node, 12)
            .next()
            .map(TerminalNode::new)
    }
    pub fn op(&self) -> Option<TerminalNode<'a>> {
        __token_children_matching(self.__node, &[8, 9, 10, 11, 12])
            .nth(0)
            .map(TerminalNode::new)
    }
}
